# music_player

./: .gitignore  CMakeLists.txt  DOTNET_NOT_FOUND.md  PROJECT_STRUCTURE.ps1  QUICK_START.md  README.md  RUN.bat  RUN_MUSIC_PLAYER.lnk  build.ps1  create-test-audio.ps1  install-dotnet.ps1  music_player.sln  quick-run.ps1
cpp_backend/headers/: APIManager.hpp  FileManager.hpp  LastFMManager.hpp  MusicPlayer.hpp  MusicPlayerAPI.hpp  Node.hpp  Player.hpp  Playlist.hpp  Song.hpp  SystemManager.hpp  UI.hpp
cpp_backend/src/: APIManager.cpp  FileManager.cpp  LastFMManager.cpp  MusicPlayer.cpp  MusicPlayerAPI.cpp  Node.cpp  Player.cpp  Playlist.cpp  Song.cpp  SystemManager.cpp  UI.cpp  main.cpp
csharp_frontend/: AudioManager.cs  MusicPlayerDLLWrapper.cs  MusicPlayerUI.cs  MusicPlayerUI.csproj
docs/: ARCHITECTURE.md  BUILD_DESKTOP_APP.md  INSTALL_DOTNET.md  QUICKSTART_DESKTOP.md
headers/: Node.hpp  Playlist.hpp  Song.h  Song.hpp
src/: Node.cpp  Playlist.cpp  Song.cpp  main.cpp
